# azSimpleWebServer

./: .gitignore  CMakeLists.txt  README.md  app_manifest.json  index.htm  index_2.htm  resource.h  web_tcp_server.c  web_tcp_server.h
DPS/: CMakeLists.txt  connection_dps.c
common/: CMakeLists.txt  azure_iot.c  cloud.c  cloud.h  connection.h  epoll_timerfd_utilities.c  exitcodes.h  main.c  mt3620_avnet_dev.h  options_args_parser.c  privatenetserv.c  privatenetserv.h  utils.c  utils.h  web_tcp_server.c  web_tcp_server.h  web_tcp_server_2.c
html/txt/: index.htm
oldcodebackup/: index.htm  web_tcp_server.h
